finish fixing nav issues and overflow in mobile

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -141,7 +141,7 @@ a {
   top: 80px;
 }
 
-.addBorder{
+.active_nav{
   border-bottom: 2px solid var(--clr-white-default);
   font-weight: bold;
 }
@@ -157,7 +157,7 @@ a {
 .navs {
   display: flex;
   justify-content: space-between;
-  padding: 0 25px;
+  padding: 0 20px;
   position: relative;
   bottom: 50px;
 }
@@ -1368,239 +1368,26 @@ OUR SERVICES SEECTION
                             CONTACT/FOOTER SECTION
  **************************************************************/
 .contact_Footer{
-  display: block;
+  display: flex;
+  flex-wrap: wrap;
+}
+.IG_Photos{
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 30px;
+}
+.IG_Photos img{
+  width: 100%;
 }
 .Navigation_Footer{
   margin-left: 0;
-}
-.IG_Photos{
-  grid-template-columns: 1fr;
-  gap: 10px;
-}
-.IG_Photos img{
-  width: 150px;
-}
-
-#socials_Footer{
-  display: block;
-  text-align: center;
-  margin: 25px 0;
 }
 .copyRight{
   text-align: center;
 }
 }
-
-/* Ipads */
-
-
-  .drops ul li {
-    padding: 25px;
-  }
-
-  .search-media {
-    display: block;
-    position: relative;
-    left: 50px;
-  }
-   /* ************************************************
-        Home
-   **************************************************/
-   #home{
-   margin: 40px 0 0 0;
-   background: url(../images/bg-1.jpg) no-repeat center center/cover;
-    padding: 25px 15px;
- }
-   .searchbg{
-    margin: 50px 0;
-   }
-   /**********************************  
-DEPARTMENT SEECTION 
- ***************************************/
- .departments_specs{
-  display: block;
-}
-.box_Specs{
-  width: 100%;
-  text-align: center;
-  margin: 15px 0;
-}
-#img_cardiology{
-  width: 100%;
-}
-/**********************************  
-OUR SERVICES SEECTION 
- ***************************************/
- .servicesContainer{
- grid-template-columns: repeat(2, 1fr);
- }
 
  
-  /* ************************************************************
-                            BOOK APPOINTMENT SECTION
- **************************************************************/
-  .apppointment_Container{
-    display: block;
- }
- .firstDetails, .Second_Details, .third_Details{
-  display: block;
-  text-align: center;
- }
- .bookAppointment{
-  height: auto;
-  margin: 0 20px;
-  padding: 20px;
-  top: 0;
- }
- .appointment_img{
-    text-align: center;
-    margin: 20px 0;
- }
- #Book_appointment_Image{
-  width: 400px;
-  bottom: 0;
-}
-/* ************************************************************
-                            SPECIALISTS SECTION SECTION
- **************************************************************/
-
-.first_Row{
-  display: block;
-}
-.row, .row_2, .row_3{
-  margin: 15px 0;
-}
-.row_contents:hover>.specialists_HoursDays, .row2_contents:hover>.specialists_HoursDays_2,
-.row3_contents:hover>.specialists_HoursDays_3{
-    margin-left: 250px;
-    margin-top: 10px;
-}
- /* ************************************************
-       BLOGS SECTION
-   **************************************************/
-.blogs_contents{
-  display: block;
-}
-.blog_Initial, .blog_2{
-  display: block;
-}
-.blog_Texts, .blog_2_Texts{
-    height: auto;
-}
-.blog_photo, .blog_2Photo{
-  /* text-align: center; */
-  margin: 15px 0;
-}
-#blog_photo_Img{
-  width: 100%;
-}
-/* ************************************************************
-                            CONTACT/FOOTER SECTION
- **************************************************************/
-.contact_Footer{
-  display: block;
-}
-.Navigation_Footer{
-  margin-left: 0;
-}
-.IG_Photos{
-  grid-template-columns: repeat(3, 1fr);
-  gap: 10px;
-}
-.IG_Photos img{
-  width: 200px;
-}
-
-#socials_Footer{
-  display: block;
-  text-align: center;
-  margin: 25px 0;
-}
-.copyRight{
-  text-align: center;
-}
-
-@media screen and (min-width: 950px) and (max-width: 1024px) {
-  .departments_specs{
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  column-gap: 20px;
-  margin: 5px 20px;
-}
-.box_Specs{
-  width: 100%;
-  text-align: center;
-  margin: 2px 0;
-}
-#img_cardiology{
-  width: 100%;
-}
-.apppointment_Container{
-  display: flex;
-  justify-content: space-evenly;
-  margin: 10px 30px;
-  position: relative;
-  bottom: 50px;
-}
-.appointment_img{
-  /* background: var(--clr-dark-main); */
-  width: 280px;
-  position: relative;
-  top: 50px;
-}
- #Book_appointment_Image{
-  position: relative;
-  /* bottom: 100px; */
-  left: -50px;
-  max-width: 310px;
-}
-   .servicesContainer{
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  margin: 30px 15px;
-  column-gap: 35px;
-  row-gap: 10px;
- }
-
- .first_Row, .Second_Row{
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  margin: 40px 15px;
-  column-gap: 15px;
-}
-  /* ************************************************
-       BLOGS SECTION
-   **************************************************/
-.blogs_contents{
-  display: block;
-}
-
-.blog_Texts, .blog_2_Texts{
-    height: auto;
-}
- .comment{
-    position: relative;
-    left: 15px;
-   }
-
-   /* ************************************************************
-                            CONTACT/FOOTER SECTION
- **************************************************************/
-.contact_Footer{
-  grid-template-columns: repeat(2, 1fr);
-}
-.Navigation_Footer{
-  margin-left: 0;
-}
-.IG_Photos{
-  grid-template-columns: repeat(3, 1fr);
-  gap: 10px;
-}
-.IG_Photos img{
-  width: 200px;
-}
-  
-}
 
 /* Css Loader */
 .loader {
